--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "ts-node-dev --respawn ./src/index.ts",
-    "build": "npx tsc"
+    "build": "tsc"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -34,6 +34,6 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.4"
   }
 }
